fix scrollbar border issue

--- a/src/css/index.styl
+++ b/src/css/index.styl
@@ -8,6 +8,9 @@
         font-size 12px
         font-family '돋움', Dotum, Helvetica, 'Apple SD Gothic Neo', Sans-serif
 
+        &.no-scroll-x
+            border-bottom-width 0
+
         ::-webkit-scrollbar
             -webkit-appearance none
             width 17px
