--- a/src/css/layout.styl
+++ b/src/css/layout.styl
@@ -25,6 +25,8 @@
     left 0
     right 17px
     height 1px
+    &.no-scroll-y
+        right 0
 
 .head-area
     border-style solid
@@ -59,7 +61,7 @@
         position relative
         margin-right 17px
         overflow hidden
-        &.no-scroll
+        &.no-scroll-y
             margin-right 0
 
     .body-area
